Update profile tab
- includes players last 5 scores - after 5 have been played calculates average and resets

--- a/index.html
+++ b/index.html
@@ -54,11 +54,35 @@
     <!-- PROFILE STATS -->
     <div id="profile" class="tabcontent">
       <h3>profile</h3>
+      <div class="column">
+        <h2 id="last-scores">last 5 scores:</h2>
+        <p id="l-one"></p>
+        <p id="l-two"></p>
+        <p id="l-three"></p>
+        <p id="l-four"></p>
+        <p id="l-five"></p>
+        <p id="avg"></p>
+      </div>
+
+      <div class="column">
+        <h2 id="best-scores">top 5 scores:</h2>
+      </div>
+
+      <div class="column">
+        <h2 id="other">another title</h2>
+      </div>
     </div>
 
     <!-- HIGH SCORES -->
     <div id="high-score" class="tabcontent">
       <h3>high scores</h3>
+      <ol>
+        <!-- <li> patricai </li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li>jimmeh</li> -->
+      </ol>
     </div>
 
     <!-- PASSAGES -->
