Update top scores column in profile tab
- displays users top 5 scores

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
       <!-- TOP 5 SCORES COLUMN -->
       <div class="column">
         <h2 id="best-scores">top 5 scores:</h2>
+        <p id="t-one"></p>
+        <p id="t-two"></p>
+        <p id="t-three"></p>
+        <p id="t-four"></p>
+        <p id="t-five"></p>
       </div>
 
       <!-- PROFILE STATS COLUMN -->
