--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- USER INPUT BOX -->
       <div>
       <form>
-        <input id="user-input" type="text" placeholder="Type text here" onkeyup="onKeyPress(0)" disabled>
+        <input autocomplete="off" id="user-input" type="text" placeholder="Type text here" onkeyup="onKeyPress(0)" disabled>
       </form>
       </div>
 
